--- a/paper/paper_PE.tex
+++ b/paper/paper_PE.tex
@@ -311,7 +311,7 @@ The transfer frequency $f_{L}$ correspond to fitting a full wavelength in the ar
 \subsection{Time Delay Interferometry}
 \label{subsec:TDIresponse}
 
-To mitigate laser noise, LISA requires Time Delay Interferometry (TDI)~\cite{TintoArmstrong99, Armstrong+99, Estabrook+00, Dhurandhar+02, Tintoliving}. These TDI observables are built from delayed combinations of the one-arm basic observables~\eqref{eq:defyslr}. Detailed cancellations for a flexing and rotating constellation prompted the development of higher-generation TDI schemes~\cite{Shaddock03, CornishHellings03, Shaddock+03, Tinto+04}. However, these refinements affect only marginally the response to the gravitational waves. We therefore limit ourselves to first-generation TDI and adopt a rigid approximation for the cancellation, where delays are all constant and set to $L$. Using the notation $y_{slr,nL} = y_{slr}(t - nL)$, the first-generation TDI Michelson observable $X$ reads~\cite{Vallisneri04}
+To mitigate laser noise, LISA requires Time Delay Interferometry (TDI)~\cite{TintoArmstrong99, Armstrong+99, Estabrook+00, Dhurandhar+02, Tintoliving}. These TDI observables are built from delayed combinations of the one-arm basic observables~\eqref{eq:defyslr}. Detailed cancellations for a flexing and rotating constellation prompted the development of higher-generation TDI schemes~\cite{Shaddock03, CornishHellings03, Shaddock+03, Tinto+04}. However, these refinements affect only marginally the response to the gravitational waves. We therefore limit ourselves to first-generation TDI and adopt a rigid approximation for the constellaion, where delays are all constant and set to $L$. Using the notation $y_{slr,nL} = y_{slr}(t - nL)$, the first-generation TDI Michelson observable $X$ reads~\cite{Vallisneri04}
 \begin{align}
 	X &= y_{31} + y_{13,L} + \left( y_{21} + y_{12,L} \right)_{,2L} \nn\\
 	& - \left( y_{21} + y_{12,L} \right) - \left( y_{31} + y_{13,L} \right)_{,2L} \,,
@@ -676,7 +676,7 @@ Fig.~\ref{fig:tranferSMBHCase9} shows the detail of the transfer functions thems
 \begin{figure*}
   \centering
   \includegraphics[width=.98\linewidth]{../plots/overlapmodebymode_maxfscaledlm_t.pdf}
-  \caption{Cumulative contribution to $\mathrm{SNR}^{2}$ as defined in~\eqref{eq:defcontribSNR2}. The left panel shows inner products of modes with themselves, the middle panel shows cross-terms involving $h_{22}$, while the right panel shows other cross-terms. In all panels the black line represents the total. The horizontal axis gives the time to merger, with vertical lines for the cuts of~\ref{subsec:MBHBacctime}, and the dots on the right of each panel show the result for the full signal including the post-merger.}
+  \caption{Cumulative contribution to $\mathrm{SNR}^{2}$ as defined in~\eqref{eq:defcontribSNR2}. The left panel shows inner products of modes with themselves, the middle panel shows cross-terms involving $h_{22}$, while the right panel shows other cross-terms. In all panels the black line represents the total. The horizontal axis gives the time to merger, with vertical lines for the cuts of~\ref{subsec:MBHBacctime}, and the dots on the right of each panel show the result for the full signal including the post-merger. \SM{Make clear it is $|(h|h')|$ for cross terms -- changes sign}}
   \label{fig:modeoverlapsoftime}
 \end{figure*}
 
