Remove package ulem

--- a/paper/paper_PE.tex
+++ b/paper/paper_PE.tex
@@ -8,7 +8,7 @@
 \usepackage{bm}
 %\usepackage{color}
 \usepackage{enumerate}
-\usepackage{ulem}
+%\usepackage{ulem}
 \usepackage{tabularx}
 \usepackage{braket}
 
